--- a/platformio.ini
+++ b/platformio.ini
@@ -19,11 +19,12 @@ lib_deps =
     https://github.com/GuruSR/Olson2POSIX.git
     https://github.com/GuruSR/SmallNTP.git
     https://github.com/GuruSR/SmallRTC.git
-    https://github.com/GuruSR/StableBMA.git
+    https://github.com/etwasmitbaum/StableBMA456.git
     https://github.com/tzapu/WiFiManager.git  ; unused, needed to build Watchy
     https://github.com/orbitalair/Rtc_Pcf8563.git
     sqfmi/Watchy
 
+build_type = release
 ;;; For debugging, try these
 ; build_type = debug
 ; monitor_filters = esp32_exception_decoder
