--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@ framework = arduino
 ; The current arduino-ESP32 platform (2.0.3) seems to have issues with
 ; esp_sleep_get_wakeup_cause() not working right, leading to boot loops.
 ; Pin to the previous version (2.0.14) which works better.
-platform_packages = framework-arduinoespressif32 @ 3.20014.231204
+platform_packages = framework-arduinoespressif32 @ 3.20002.220503
 board = esp32dev  ; TODO: Make a board definition for Watchy?
 board_build.partitions = min_spiffs.csv
 board_build.hwids = 10C4, EA60  ; The CP2102N used on Watchy
@@ -24,7 +24,7 @@ lib_deps =
     https://github.com/orbitalair/Rtc_Pcf8563.git
     sqfmi/Watchy
 
-build_type = release
+;build_type = release
 ;;; For debugging, try these
-; build_type = debug
-; monitor_filters = esp32_exception_decoder
+build_type = debug
+monitor_filters = esp32_exception_decoder
